# Unsupervised-Learning-of-Stochastic-And-Or-Grammars

./: CMakeLists.txt  Makefile  README.md
AOF_Test/: CMakeLists.txt  Makefile  grammar_exp1.cpp  test_learner.cpp
AOG_Base/: AOG.h  AOG_Edge.h  AOG_Vertex.h  Symbolic_Rule.h  Symbolic_State.h
Core/: Graph.hpp
Faces/: CMakeLists.txt  README.md
Faces/include/: argparse.hpp  components.h  face_params.h  utils.h
Faces/src/: components.cpp  face_params.cpp  face_params_learn.cpp  learn.cpp  sample.cpp  utils.cpp
Learner/Structure_Learner/: And_Or_Fragment.h  And_Or_Fragmentold.h  Context_Matrix.h  clearn aof.cpp  structure_learner.h  structure_learnerold.h
Testcases/: CMakeLists.txt  KL_distance.cpp  grammar_example.cpp
Utils/: Earley_Parser.h
